# proto-cell

./: Cargo.toml  GENESIS.md  README.md  test.html
spores/gpt-agape/: README.md  manifest.json  pulse.sh
src/: lib.rs  transpiler.rs  zero_map.rs
